[package]
authors = ["Pascal Seitz <pascal.seitz@sap.com>"]
edition = "2018"
name = "toml2-json-web"
version = "0.1.0"
[dependencies]
serde-transcode = "1.1.0"
serde_json = "1.0.40"
toml = "0.5.3"
wasm-bindgen = "0.2"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.1"

[dependencies.serde]
default-features = false
version = "1.0.100"

[dependencies.wee_alloc]
optional = true
version = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
[profile.release]
opt-level = "s"
