[package]
authors = ["Pascal Seitz <pascal.seitz@sap.com>"]
edition = "2018"
name = "toml2-json-web"
version = "0.1.0"
[dependencies]
serde-transcode = "1.1.1"
serde_json = "1.0.91"
toml = "0.6.0"
wasm-bindgen = "0.2.83"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.7"

[dependencies.serde]
default-features = false
version = "1.0.152"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-g', '-O']

